<resources>
    <string name="app_name">FallDetection</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="call_emergency">CALL EMERGENCY</string>
    <string name="cancel">CANCEL</string>
    <string name="or_string">Or</string>
    <string name="pause_string">| |</string>
    <string name="acc_string">Accelerometer</string>
    <string name="gyro_string">Gyroscope</string>
    <string name="init_x">X</string>
    <string name="init_y">Y</string>
    <string name="init_z">Z</string>
    <string name="x_value">X: %s</string>
    <string name="y_value">Y: %s</string>
    <string name="z_value">Z: %s</string>
    <string name="banner_string">No Fall Detected</string>
    <string name="fall_string">FALL DETECTED!</string>
    <string name="no_notifications">No Notification History</string>
    <string name="delete_notifications">DELETE NOTIFICATION HISTORY</string>
    <string name="call_string">INSERT A NUMBER TO CALL</string>
    <string name="set_timer_string">SET TIMERS</string>
    <string name="seconds_hint_string">Enter seconds</string>
    <string name="save_string">SAVE</string>
    <string name="countdown_string">COUNTDOWN</string>
    <string name="operations_string">OPERATIONS</string>
    <string name="sound_string">SOUND</string>
    <string name="set_delay_string">SET OPERATIONS DELAY</string>
    <string name="set_numbers_string">MANAGE PHONE NUMBERS</string>
    <string name="set_emails_string">MANAGE EMAIL CONTACTS</string>
    <string name="set_priority_string">MANAGE OPERATION PRIORITY</string>
    <string name="set_call_string">SET CONTACT TO CALL</string>
    <string name="add_number_string">ADD NUMBER</string>
    <string name="add_number_hint_string">Enter a number</string>
    <string name="add_email_string">ADD EMAIL</string>
    <string name="add_email_hint_string">Enter a contact</string>
    <string name="PREFIX_NUMBER">+39</string>
    <string name="set_ip_string">SERVER COMMUNICATION</string>
    <string name="ip_button_string">SET SERVER IP</string>
    <string name="dot_string">.</string>
    <string name="MAX_IP_VALUE">255</string>
    <string name="ip_hint_string">0&#8211;255</string>
    <string name="set_credentials_string">SENDER CREDENTIALS</string>
    <string name="add_user_hint_string">Enter sender email</string>
    <string name="add_password_hint_string">Enter 16&#8211;digit password</string>
    <string name="add_credentials_string">Set sender credentials</string>
    <string name="emergency_sound">Emergency sound…</string>
    <string name="acc_not_available">Accelerometer not available</string>
    <string name="gyro_not_available">Gyroscope not available</string>
    <string name="seconds_left_timer">%d s</string>
    <string name="banner_operation_text">%1$s… [%2$d s]</string>
</resources>